src/pages/login-cadastro/styles.css
:root {
  --base-module-size: 10px;
  --base-radius-size: 10px;
  --base-transition-time: 1s;
  --input-height-size: 56px;
  --input-width-size: 300px;
}

body {
  background-image: url(../../assets/img/background-clean.jpg);
  background-repeat: no-repeat;
  background-size: 100% 100%;

  display: flex;
  align-items: center;

  height: 100vh;
  font-family: Nautilus Pompilius;

  opacity: 0;
  transition: opacity 1s;
}

input {
  font-family: inherit;
}

/* ========================================================================== */
/* LAYOUT CONTAINERS */
/* ========================================================================== */

.container {
  display: flex;
  flex-direction: row;
  background-color: var(--color-background);
  border-radius: var(--base-module-size);
  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.21);
  position: relative;
  overflow: hidden;

  width: 900px;
  height: 600px;
  margin: auto auto;

  max-width: 100%;
  min-height: 480px;
}

.overlay {
  overflow: hidden;
  position: absolute;
  height: 100%;
  width: 50%;
  transition: all var(--base-transition-time);
  z-index: 2;
  top: 0;
}

.overlay--primary {
  background-color: var(--color-primary);
  z-index: 3;
}

.overlay--secondary {
  transition: all 0.75s;
}

.overlay-container {
  display: grid;

  grid-template-columns: 1fr 1fr 1fr;
  grid-template-areas: "left . right ";

  height: 100%;
  width: 300%;
  position: relative;
  transition: all var(--base-transition-time);
}

.overlay-panel {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  padding: 20px 50px;
  width: 100%;
}

.overlay-right {
  grid-area: left;
}

.overlay-left {
  grid-area: right;
}

.overlay.left-active {
  transform: translateX(0);
}

.overlay--primary.right-active .overlay-container {
  transform: translateX(calc(-100% / 3 * 2));
}

.overlay--primary.left-active .overlay-container {
  transform: translateX(0);
}

.overlay--secondary.right-active .overlay-container {
  transform: translateX(0);
}

.overlay--secondary.left-active .overlay-container {
  transform: translateX(calc(-100% / 3 * 2));
}

.overlay.right-active {
  transform: translateX(100%);
}

/* ========================================================================== */
/* ========================================================================== */
/* ========================================================================== */

/* ========================================================================== */
/* FORMS */
/* ========================================================================== */

form {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100%;
}

.overlay-panel__title {
  font-size: 38px;
  color: white;
  margin-bottom: 30px;
}

.login,
.login__form,
.login__footer,
.info {
  display: flex;
  flex-direction: column;
}

.form-container__name,
.form-container__email,
.form-container__password {
  font-size: 20px;
  height: 45px;
  width: 300px;

  padding-left: 25px;
  background-color: #eee;
}

.info__description {
  width: 200px;
  font-size: 16px;
  text-align: center;
  color: white;
  margin-bottom: 20px;
  line-height: 20px;
  letter-spacing: 0.5px;
}

.login__title {
  font-size: 40px;
  color: var(--color-primary);
  text-align: center;
}

.login__footer {
  display: flex;
  align-items: center;
}

.login__lost-password {
  font-size: 16px;
  margin: 15px 0;
  color: var(--color-primary);
}

.register,
.register__form,
.register__footer,
.info {
  display: flex;
  flex-direction: column;
}

.register {
  justify-content: space-evenly;
  align-items: center;

  background-color: var(--color-background);
}

.register__title {
  font-size: 40px;
  color: var(--color-primary);
}

.register__footer {
  display: flex;
  align-items: center;
}

.register__lost-password {
  margin-bottom: 15px;
  color: var(--color-primary);
}

.register-container .form-container__button {
  margin-top: 30px;
}

.form-container__button,
.overlay-panel__button {
  padding: 12px 45px;
  letter-spacing: 1px;
  transition: transform 80ms ease-in, opacity 80ms;

  width: 200px;
  height: 50px;

  margin-top: 20px;

  font-size: 19px;
  font-family: inherit;
  border-radius: 10px;
  background-color: var(--color-primary);
  border: solid 1.5px white;
  color: #ffffff;
  cursor: pointer;
}

.form-container__button:active,
.overlay-panel__button:active {
  transform: scale(0.95);
}

.form-container__button:focus,
.overlay-panel__button:focus {
  outline: none;
}

.overlay-panel__button:hover {
  opacity: 1.8;
}

/* ========================================================================== */
/* TABLET STYLES*/
/* ========================================================================== */
@media screen and (min-width: 600px) and (max-width: 959px) {
  :root {
    --input-width-size: 230px;
  }

  .container {
    width: 680px;
  }

  .overlay-panel__title,
  .login__title {
    font-size: 30px;
    text-align: center;
  }
}

/* ========================================================================== */
/* MOBILE STYLES*/
/* ========================================================================== */
@media screen and (max-width: 599px) {
  .container {
    width: 100%;
    height: 100%;
    margin: auto auto;
    flex-direction: column;
    border-radius: 0;
  }

  .overlay {
    width: 100%;
  }

  .overlay-panel {
    padding: 20px 0px;
  }

  .overlay--primary {
    height: 30%;
  }

  .overlay--secondary {
    height: 70%;
  }

  .overlay-container {
    display: grid;

    grid-template-rows: 1fr 1fr 1fr;
    grid-template-columns: 1fr;
    grid-template-areas:
      "left "
      " . "
      "right ";

    height: 300%;
    width: 100%;
    position: relative;
    transition: all var(--base-transition-time);
  }

  .overlay-right {
    grid-area: left;
  }

  .overlay-left {
    grid-area: right;
  }

  .overlay.left-active {
    transform: translateY(0);
  }

  .overlay--primary.right-active .overlay-container {
    transform: translateY(calc(-100% / 3 * 2));
  }

  .overlay--primary.left-active .overlay-container {
    transform: translateY(0);
  }

  .overlay--secondary.right-active .overlay-container {
    transform: translateY(0);
  }

  .overlay--secondary.left-active .overlay-container {
    transform: translateY(calc(-100% / 3 * 2));
  }

  .overlay.right-active.overlay--secondary {
    transform: translateY(45%);
  }
  .overlay.right-active.overlay--primary {
    transform: translateY(235%);
  }

  .overlay-panel__title {
    font-size: 26px;
    color: white;
    margin-bottom: 14px;
  }

  .info__description {
    margin-bottom: 0;
  }

  .login__title,
  .register__title {
    margin-bottom: 20px;
  }
}

@media screen and (max-height: 750px) {
  .info__description {
    display: none;
  }
}

@media screen and (max-height: 600px) {
  :root {
    --input-width-size: 230px;
    --input-height-size: 40px;
  }

  .login__title,
  .register__title,
  .overlay-panel__title {
    font-size: 24px;
  }

  .overlay-panel__button,
  .form-container__button {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 150px;
    height: 46px;
  }

  .info__description {
    display: none;
  }
}

